# Deep_Reinforcement_Learning

./: .gitignore  pyproject.toml
Informe final/: .gitattributes  README.md
android-hand-door/: evaluate.py  evaluate_headless.py  evaluate_sb3.py  main.py  pyproject.toml  train_sac.py  train_sac_parallel.py  train_sac_sb3.py
android-hand-door/agents/: sac.py  sac_sb3.py
beam-rider/: evaluate.py  main.ipynb  main.py  pyproject.toml  requirements.txt  train_ddqn.py
double-dunk/: README.md  evaluate.py  main.py  pyproject.toml  requirements.txt  train_ddqn.py  train_qrdqn.py
double-dunk/agents/: ddqn.py  qrdqn.py
double-dunk/environments/: double_dunk_env.py
double-dunk/logs/ddqn/: training_log.csv
double-dunk/logs/qrdqn/: training_log.csv
double-dunk/models/ddqn/: networks.py
double-dunk/models/qrdqn/: networks.py
double-dunk/train/: replay_buffer.py
double-dunk/utils/: logger.py
fetch-reach/: README.md  evaluate_td3.py  evaluate_td3_sb3.py  main.py  train_td3_sb3.py
lunar-landing/: .gitattributes  README.md  REPORT.md  evaluate.py  evaluate_dqn.py  main.ipynb  main.py  main_dqn.py  pyproject.toml  requirements.txt  train_dqn.py
lunar-landing/agents/: __init__.py  dqn.py  random_agent.py
lunar-landing/cli/: cli.py
lunar-landing/environments/: __init__.py  lunar_env.py  lunar_env_test.py
lunar-landing/logs/: training_log.csv
lunar-landing/models/dqn/: networks.py
lunar-landing/train/: train.py
lunar-landing/utils/: logger.py
projects/: challenge_1.md
shadow-dexterous-hand-reach/: evaluate.py  main.py  train_sac_parallel.py
(+22 files in other folders)
