[project]
name = "deep-reinforcement-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "swig>=4.3.1",
    "gymnasium[box2d]>=1.2.0",
    "numpy>=2.3.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "uv>=0.8.13",
    "click>=8.1.0",
    "rich>=13.0.0",
    "tensorboard>=2.20.0",
    "jupyterlab>=4.4.6",
]
